<resources>
    <string name="app_name">LunchPicker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LunchPicker</string>
    <string name="nav_header_subtitle"><u>https://lunchpicker-2232b.firebaseapp.com</u></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_random_food">Random food</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contact_us">Contact us</string>

    <!-- Home -->
    <string name="logo">Logo</string>
    <string name="place">Place</string>
    <string name="current_location">Current Location</string>
    <string name="enter_location">Enter location&#8230;</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="there_are_no_result">There are no result.</string>

    <!-- Random food -->
    <string name="current_food_category"><b>Current food category:</b></string>
    <string name="current_food_category_value">test</string>
    <string name="use_random_food_category">Use random food category</string>
    <string name="refresh">Refresh</string>

    <!-- Favourites -->
    <string name="your_total_favourites"><b>Your total favourites: </b></string>
    <string name="your_total_favourites_value">0</string>
    <string name="delete_all_favourites">Delete all favourites</string>

    <!-- Settings -->
    <string name="subscribe_message">Subscribe message</string>
    <string name="change_language">Change language</string>
    <string name="please_select">Please select&#8230;</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>

    <!-- Contact us -->
    <string name="contact_us">Contact us via email or visit our github repo</string>
    <string name="email_logo">Email logo</string>
    <string name="github_logo">Github logo</string>
    <string name="donate">Donate for lunch picker better features and development</string>
    <string name="donorbox">Donorbox</string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="stripe">Stripe</string>
    <string name="donate_button">Donate</string>
    <string name="buy_me_a_coffee_button">Buy me a coffee</string>
    <string name="enter_amount">Enter amount</string>
    <string name="pay_now_button">Pay now</string>

    <!-- RecyclerView food result list item -->
    <string name="card_view_circle_text">T</string>
    <string name="card_view_name">test</string>
    <string name="card_view_category">test, test</string>
    <string name="card_view_image">Card view image</string>
    <string name="card_view_location">Location:</string>
    <string name="card_view_location_text_url">test</string>
    <string name="card_view_phone">Phone:</string>
    <string name="card_view_phone_value">+852 1111 2222</string>
    <string name="card_view_rating">Rating:</string>
    <string name="card_view_rating_value">3.5</string>
    <string name="delete_favourites_button">Delete favourites button</string>
    <string name="favourites_image_view">Favourites image view</string>
    <string name="link_image_view">Link image view</string>

    <!-- RestaurantDetails -->
    <string name="restaurant_details_title">Restaurant Details</string>
    <string name="restaurant_details_name_text_view">Name:</string>
    <string name="restaurant_details_name_text_view_value">test</string>
    <string name="restaurant_details_phone_text_view">Phone:</string>
    <string name="restaurant_details_phone_text_view_value">+852 2222 3333</string>
    <string name="restaurant_details_url_text_view">Url:</string>
    <string name="restaurant_details_url_text_view_value">Open url</string>
    <string name="restaurant_details_location_text_view">Location:</string>
    <string name="restaurant_details_location_text_view_value">test</string>
    <string name="restaurant_details_day">Days</string>
    <string name="restaurant_details_start">Start</string>
    <string name="restaurant_details_end">End</string>
    <string name="restaurant_details_is_overnight">Is overnight</string>
    <string name="restaurant_details_hours_type_text_view">Hours type:</string>
    <string name="restaurant_details_hours_type_text_view_value">test</string>
    <string name="restaurant_details_is_open_now_text_view">is open now</string>
</resources>
