<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/delete_favourites_button_linear_layout"
                android:visibility="gone"
                android:gravity="end"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/delete_favourites_button"
                    android:src="@android:drawable/ic_delete"
                    android:contentDescription="@string/delete_favourites_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/name_linear_layout"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/delete_favourites_button_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/circle_text_view"
                    android:background="@drawable/circle"
                    android:text="@string/card_view_circle_text"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/name_text_view"
                        android:text="@string/card_view_name"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/category_text_view"
                        android:text="@string/card_view_category"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/image_linear_layout"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_below="@+id/name_linear_layout"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.github.chrisbanes.photoview.PhotoView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_below="@+id/image_linear_layout"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/card_view_location"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/location_text_view"
                        android:text="@string/card_view_location_text_url"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/card_view_phone"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/phone_text_view"
                        android:text="@string/card_view_phone_value"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/card_view_rating"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/rating_text_view"
                        android:text="@string/card_view_rating_value"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/favourites_image_view"
                        android:src="@drawable/favourites_null"
                        android:contentDescription="@string/favourites_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/link_image_view"
                        android:src="@drawable/link"
                        android:contentDescription="@string/link_image_view"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>