<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="40dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/contact_us"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/email_icon"
                        android:src="@drawable/email"
                        android:contentDescription="@string/email_logo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>

                    <ImageView
                        android:id="@+id/github_icon"
                        android:src="@drawable/github"
                        android:contentDescription="@string/github_logo"
                        android:layout_marginStart="15dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/donate"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/donorbox_radio_button"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donorbox" />

                    <RadioButton
                        android:id="@+id/stripe_radio_button"
                        android:checked="true"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stripe" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/donorbox_linearLayout"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/donate_button"
                        android:background="@color/colorPrimary"
                        android:text="@string/donate_button"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/stripe_linearLayout"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/amount"
                        android:autofillHints="@string/enter_amount"
                        android:hint="@string/enter_amount"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/currency_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.stripe.android.view.CardInputWidget
                        android:id="@+id/card_input_widget"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                    <Button
                        android:id="@+id/pay_now_button"
                        android:background="@color/colorPrimary"
                        android:text="@string/pay_now_button"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>