<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/image_linear_layout"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/logo"
                            android:contentDescription="@string/logo"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_below="@+id/image_linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/food_category_dropdown"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <RadioGroup
                            android:orientation="horizontal"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/place_radio_button"
                                android:buttonTint="@color/colorPrimary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/place" />

                            <RadioButton
                                android:id="@+id/current_location_radio_button"
                                android:buttonTint="@color/colorPrimary"
                                android:layout_marginStart="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/current_location" />
                        </RadioGroup>

                        <LinearLayout
                            android:id="@+id/need_to_show_linear_layout"
                            android:orientation="vertical"
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:id="@+id/place_linear_layout"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/location_edit_text"
                                    android:inputType="text"
                                    android:autofillHints="@string/enter_location"
                                    android:hint="@string/enter_location"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <Button
                                    android:id="@+id/submit_button"
                                    android:background="@color/colorPrimary"
                                    android:text="@string/submit"
                                    android:textColor="@android:color/white"
                                    android:layout_marginTop="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                        </LinearLayout>

                        <Button
                            android:id="@+id/clear_button"
                            android:visibility="gone"
                            android:background="@color/colorAccent"
                            android:text="@string/clear"
                            android:textColor="@android:color/white"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/food_result_list_recyclerView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:id="@+id/no_result_card_view"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="15dp"
                    android:text="@string/there_are_no_result"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>